--- a/app/src/main/res/menu/menu_list_view.xml
+++ b/app/src/main/res/menu/menu_list_view.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.owncloudnotes.NotesListViewActivity"
-      xmlns:app="http://schemas.android.com/apk/res-auto" >
+      tools:context="com.example.owncloudnotes.NotesListViewActivity">
+    <item
+        android:id="@+id/search"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
-        app:showAsAction="never"
-        android:title="@string/action_about"/>
+        android:title="@string/action_about"
+        app:showAsAction="never"/>
 
 </menu>
