--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -18,6 +18,7 @@
             android:layout_alignParentEnd="false"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_alignWithParentIfMissing="true"
             android:ellipsize="end"
@@ -37,6 +38,14 @@
             android:singleLine="true"
             android:textColor="@drawable/list_item_color_selector_low"
             android:textSize="14sp"/>
+
+        <ImageView
+            android:id="@+id/noteStatus"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_sync_error_holo"/>
 
     </RelativeLayout>
 
