--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:background="@color/bg_highlighted"
@@ -24,9 +25,9 @@
         android:textSize="12sp" />
 
     <ImageView
-        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="1px"
+        android:layout_below="@id/sectionTitle"
         android:src="@color/separator" />
 </RelativeLayout>
