--- a/app/src/main/res/values/plurals.xml
+++ b/app/src/main/res/values/plurals.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="ab_selected">
+        <item quantity="one">%d selected</item>
         <item quantity="other">%d selected</item>
     </plurals>
 </resources>
