Fix and clear up translations

--- a/app/src/main/res/layout/fragment_about_contribution_tab.xml
+++ b/app/src/main/res/layout/fragment_about_contribution_tab.xml
@@ -38,5 +38,20 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="@string/about_issues" />
+
+        <TextView
+            android:id="@+id/about_translate_title"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about_translate_title" />
+
+        <TextView
+            android:id="@+id/about_translate"
+            style="?android:attr/editTextPreferenceStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/about_translate" />
     </LinearLayout>
 </ScrollView>
