--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -31,12 +31,31 @@
         android:layout_height="wrap_content"
         android:background="@drawable/list_item_background_selector">
 
-        <ImageView
-            android:id="@+id/noteFavorite"
+        <FrameLayout
             android:layout_centerVertical="true"
-            android:padding="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/noteFavorite"
+                android:contentDescription="@string/menu_favorite"
+                android:padding="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+
+            <ImageView
+                android:id="@+id/noteStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="12dp"
+                android:layout_gravity="center_vertical|end"
+                android:baseline="14dp"
+                android:src="@drawable/ic_sync_blue_18dp" />
+        </FrameLayout>
 
 
         <android.support.v7.widget.LinearLayoutCompat
@@ -62,17 +81,6 @@
                     android:layout_weight="1"
                     android:textColor="@drawable/list_item_color_selector"
                     android:textSize="@dimen/primary_font_size" />
-
-                <ImageView
-                    android:id="@+id/noteStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:baseline="14dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_sync_blue_18dp" />
             </android.support.v7.widget.LinearLayoutCompat>
 
 
