--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -27,44 +27,56 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/colorPrimary"
-                    android:padding="10dp"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                    android:orientation="horizontal"
-                    android:gravity="bottom">
+                    android:layout_height="178dp"
+                    android:background="@color/primary"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:orientation="vertical"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true">
+
+                        <TextView
+                            android:id="@+id/name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:textColor="#ffffff"
+                            android:text="@string/app_name"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#ffffff"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginTop="5dp"
+                            android:id="@+id/account"
+                            android:textSize="14sp"
+                            android:textStyle="normal"
+
+                            />
+                    </LinearLayout>
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="24dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@mipmap/ic_launcher"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="38dp"
+                        android:src="@mipmap/ic_launcher_round"
                         android:contentDescription="@string/app_name" />
-
-
-                    <android.support.v7.widget.LinearLayoutCompat
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:paddingLeft="12dp"
-                        android:paddingStart="12dp"
-                        android:paddingTop="24dp"
-                        android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-                    <TextView
-                        android:id="@+id/account"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                    </android.support.v7.widget.LinearLayoutCompat>
-                </LinearLayout>
+                </RelativeLayout>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/navigationList"
