--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -31,7 +31,7 @@
             android:id="@+id/widget_note_list_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textColor="@color/white"
+            android:textColor="@color/widget_fg_contrast"
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_toRightOf="@id/widget_note_header_icon"
