--- a/app/src/main/res/layout/widget_single_note_content.xml
+++ b/app/src/main/res/layout/widget_single_note_content.xml
@@ -3,4 +3,4 @@
     android:id="@+id/single_note_content_tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:textColor="@color/black" />
+    android:textColor="@color/widget_fg_default" />
