--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,6 @@
     <color name="category_background">#FFF</color>
     <color name="category_border">@color/primary</color>
 
-    <color name="black">#000000</color>
-    <color name="white">#ffffff</color>
+    <color name="widget_fg_default">#000000</color>
+    <color name="widget_fg_contrast">#ffffff</color>
 </resources>
