--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="fg_contrast">#ffffff</color>
     <color name="icon_grey">#757575</color>
 
-    <color name="widget_background">#E6FFFFFF</color>
+    <color name="widget_background">#FFFFFF</color>
 
     <color name="category_background">#FFF</color>
     <color name="category_border">@color/primary</color>
