--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,14 +19,12 @@
     <color name="fg_contrast">#ffffff</color>
     <color name="icon_grey">#757575</color>
 
-    <color name="widget_background">#FFFFFF</color>
+    <color name="widget_background">#bfFFFFFF</color>
+    <color name="widget_fg_default">#000000</color>
+    <color name="widget_fg_contrast">#ffffff</color>
 
     <color name="category_background">#FFF</color>
     <color name="category_border">@color/primary</color>
-
-    <color name="widget_fg_default">#000000</color>
-    <!--<color name="widget_fg_default_low">@color/fg_default_low</color>-->
-    <color name="widget_fg_contrast">#ffffff</color>
     <color name="background_material_light">#db3232</color>
 
     <!-- Dark Theme -->
@@ -44,5 +42,5 @@
     <color name="fg_default_high_dark_theme">#cccccc</color>
     <color name="fg_contrast_dark_theme">#ffffff</color>
 
-    <color name="widget_background_dark_theme">#222</color>
+    <color name="widget_background_dark_theme">#bf222222</color>
 </resources>
