--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -52,27 +52,6 @@
             android:orientation="horizontal">
 
             <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/noteCategory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/spacer_2x"
-                    android:layout_marginEnd="0dp"
-                    android:ellipsize="middle"
-                    android:textColor="?android:textColorPrimary"
-                    android:textSize="@dimen/secondary_font_size"
-                    app:chipBackgroundColor="@color/primary"
-                    app:chipStrokeColor="@color/defaultBrand"
-                    app:chipStrokeWidth="1dp"
-                    tools:maxLength="50"
-                    tools:text="@tools:sample/lorem/random" />
-            </FrameLayout>
-
-            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
@@ -94,6 +73,28 @@
                     android:layout_marginEnd="4dp"
                     android:baseline="14dp"
                     app:srcCompat="@drawable/ic_sync_blue_18dp" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/noteCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="@dimen/spacer_2x"
+                    android:ellipsize="middle"
+                    android:textColor="?android:textColorPrimary"
+                    android:textSize="@dimen/secondary_font_size"
+                    app:chipBackgroundColor="@color/primary"
+                    app:chipStrokeColor="@color/defaultBrand"
+                    app:chipStrokeWidth="1dp"
+                    tools:maxLength="50"
+                    tools:text="@tools:sample/lorem/random" />
             </FrameLayout>
         </LinearLayout>
     </LinearLayout>
