--- a/app/src/main/res/layout/activity_formatting_help.xml
+++ b/app/src/main/res/layout/activity_formatting_help.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -32,9 +33,9 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/spacer_2x"
             android:layout_marginStart="@dimen/spacer_activity_sides"
             android:layout_marginEnd="@dimen/spacer_activity_sides"
+            android:padding="@dimen/spacer_2x"
             android:paddingStart="@dimen/spacer_2x"
             android:paddingEnd="@dimen/spacer_2x"
             android:textAppearance="?android:attr/textAppearanceMedium"
