--- a/app/src/main/res/layout/item_tip.xml
+++ b/app/src/main/res/layout/item_tip.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:drawablePadding="@dimen/spacer_2x"
-    android:gravity="start|center"
-    android:padding="@dimen/spacer_2x"
-    android:textColor="?android:textColorPrimary"
-    app:drawableStartCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
-    tools:maxLength="200"
-    tools:text="@tools:sample/lorem/random" />
+    android:orientation="vertical"
+    android:paddingTop="@dimen/spacer_1x"
+    android:paddingBottom="@dimen/spacer_1x">
+
+    <TextView
+        android:id="@+id/tip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/spacer_2x"
+        android:gravity="start|center"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:drawableLeftCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
+        app:drawableStartCompat="@drawable/ic_lightbulb_outline_grey600_24dp"
+        tools:maxLength="200"
+        tools:text="@tools:sample/lorem/random" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/action_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="@dimen/spacer_1x"
+        android:textColor="@color/defaultBrand"
+        android:visibility="visible"
+        tools:text="@string/error_files_app"
+        tools:visibility="visible" />
+</LinearLayout>
