--- a/app/src/main/res/menu/menu_list_context_multiple.xml
+++ b/app/src/main/res/menu/menu_list_context_multiple.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_category"
+        android:icon="@drawable/ic_folder_grey600_24dp"
+        android:orderInCategory="80"
+        android:title="@string/menu_change_category"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_share"
         android:icon="@drawable/ic_share_white_24dp"
         android:orderInCategory="90"
@@ -10,17 +17,17 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menu_delete"
-        android:icon="@drawable/ic_delete_grey600_24dp"
+        android:id="@+id/menu_move"
+        android:icon="@drawable/ic_send_grey600_24dp"
         android:orderInCategory="100"
-        android:title="@string/menu_delete"
+        android:title="@string/simple_move"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/menu_move"
-        android:icon="@drawable/ic_send_grey600_24dp"
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/ic_delete_grey600_24dp"
         android:orderInCategory="110"
-        android:title="@string/simple_move"
+        android:title="@string/menu_delete"
         app:showAsAction="ifRoom" />
 
 </menu>
